--- a/templates/views/contact.hbs
+++ b/templates/views/contact.hbs
@@ -28,7 +28,7 @@
                       </div>
                       <div class="form-group">
                         <label for="message">Select color:</label><br>
-                        <input type="color" id="color" name="color">
+                        <input type="color" id="color" name="color" class="colorChange">
                       </div><br><br>
                       <button type="submit" class="btn-style btn-primary">Submit</button>
                     </form>
@@ -41,5 +41,10 @@
 </script>  
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <script>
+        $('.colorChange').change(function(){
+            $('body').css('background-color', $(this).val());
+        });
+    </script>
 </body>
 </html>          
