--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -42,7 +42,7 @@
       </thead>
       <tbody>
         {{#each usersinfo}}
-        <tr>
+        <tr class="bgColor" style="background-color: {{this.color}};">
           <th>{{this._id}}</th>
           <td>{{this.name}}</td>
           <td>{{this.age}}</td>
@@ -64,6 +64,17 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
     crossorigin="anonymous"></script>
+
+    <script>
+      //Condition: if we click to the background color after data store, then the background becomes white, just temporary as if we reload the page then it will back to normal background of respective segment..
+        const bgColor = document.querySelectorAll('.bgColor');
+        bgColor.forEach(function(color){
+            color.addEventListener('click', function(){
+                color.style.backgroundColor = '#fff';
+            })
+        })
+        
+    </script>
 </body>
 
 </html>
